--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Lobo - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer
   Localizado no Rio de Janeiro">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
